--- a/package.json
+++ b/package.json
@@ -11,6 +11,14 @@
     "dev:debug": "npm run kill-port && nodemon --trace-deprecation app.js",
     "prod": "NODE_ENV=production node --no-deprecation app.js",
     "kill-port": "node scripts/kill-port.js",
+    "setup:all": "node scripts/setup-complete-system.js",
+    "setup:complete": "node scripts/complete-setup.js",
+    "setup:mysql": "node scripts/setup-mysql.js",
+    "setup:shifts": "node scripts/setup-shift-system.js",
+    "setup:policies": "node scripts/setup-attendance-policies.js",
+    "setup:location": "node scripts/setup-office-location.js",
+    "cleanup:sqlite": "node scripts/cleanup-sqlite.js",
+    "fix:android": "node scripts/add-missing-endpoints.js",
     "setup-db": "node scripts/setup-database.js",
     "migrate": "node scripts/migrate.js",
     "migrate:up": "node scripts/migrate.js up",
@@ -44,7 +52,6 @@
     "multer": "^2.0.1",
     "mysql2": "^3.9.7",
     "sharp": "^0.33.2",
-    "sqlite3": "^5.1.7",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
   },
